# django-celery-task-api

./: LICENSE  README.md  setup.cfg
django_celery_task_api/: apps.py  utils.py  views.py
django_celery_task_api/static/celery_tasks/: script.js
