[metadata]
name = django-celery-task-api
version = 0.1
author = Logan Bibby <me@loganbibby.com>
description = Celery task API for Django
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/loganbibby/django-celery-task-api
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    django>=2.2.9
    celery>=5.1.2
